padding issue with the player class causing it to overflow

--- a/index.css
+++ b/index.css
@@ -107,7 +107,7 @@ p {
 
 main {
   position: relative;
-  width: 100rem;
+  width: 100vw;
   height: 60rem;
   background-color: rgba(255, 255, 255, 0.35);
   backdrop-filter: blur(200px);
@@ -121,7 +121,7 @@ main {
 
 .player {
   flex: 50%;
-  padding: 9rem;
+  padding: 9rem 2rem;
   display: flex;
   flex-direction: column;
   align-items: center;
